--- a/templates/mostra_horarios.html
+++ b/templates/mostra_horarios.html
@@ -214,9 +214,7 @@
   <span id="horas_juntos">
     <span id="horas_juntos_total">0</span>
     {% lng " horas" " hours" %}<br>
-  </span><br>
-
-  <br>							
+  </span>		
 
   <script>
 
