Bancas agora são definidas por evento e não avaliação

--- a/professores/templates/professores/banca_ver.html
+++ b/professores/templates/professores/banca_ver.html
@@ -44,7 +44,7 @@
   {% endif %}
   <br>
   <b>{% lng "Tipo" "Type" %}:</b>
-  {% lng banca.composicao.exame.titulo banca.composicao.exame.titulo_en %}<br>
+  {% lng banca.tipo_evento.nome banca.tipo_evento.nome_en %}<br>
 
   {% include "cabecalho_projeto.html" with projeto=banca.get_projeto com_email=True %}
 
