--- a/templates/tabela_avaliacao_objetivos.html
+++ b/templates/tabela_avaliacao_objetivos.html
@@ -23,7 +23,7 @@
 
 {% if pesos %}
 
-  {% with exame_sigla=banca.composicao.exame.sigla %}
+  {% with exame_sigla=banca.sigla %}
     <br><h5>{% lng "Objetivos de Aprendizagem" "Learning Goals" %}</h5><br>
     {% for peso in pesos %}
       <b>{% lng peso.objetivo.titulo peso.objetivo.titulo_en %}</b>:
@@ -82,12 +82,12 @@
 
             {% if individual %}
               {% with r=peso.objetivo.get_rubrica.final.individual %}
-                {% if banca.composicao.exame.sigla != "P" %}{% comment %} Não é probation {% endcomment %}
+                {% if banca.sigla != "P" %}{% comment %} Não é probation {% endcomment %}
                   <td class="td_objetivos tabela{{peso.objetivo.id}} objetivo{{peso.objetivo.id}}I" ><label for="objetivo{{peso.objetivo.id}}I">{% lng r.I.pt r.I.en %}</label></td>
                 {% endif %}
                 <td class="{% if atrasado and peso.bloqueio_atraso < 2 %} vermelho_medio{% endif %} {% if sem_documentos %} vermelho_medio{% endif %} td_objetivos tabela{{peso.objetivo.id}} objetivo{{peso.objetivo.id}}D" ><label for="objetivo{{peso.objetivo.id}}D">{% lng r.D.pt r.D.en %}</label></td>
                 <td class="{% if atrasado and peso.bloqueio_atraso < 5 %} vermelho_medio{% endif %} {% if sem_documentos %} vermelho_medio{% endif %} td_objetivos tabela{{peso.objetivo.id}} objetivo{{peso.objetivo.id}}C objetivo{{peso.objetivo.id}}CX" ><label for="objetivo{{peso.objetivo.id}}C">{% lng r.C.pt r.C.en %}</label></td>
-                {% if banca.composicao.exame.sigla != "P" %}{% comment %} Não é probation {% endcomment %}
+                {% if banca.sigla != "P" %}{% comment %} Não é probation {% endcomment %}
                   <td class="{% if atrasado and peso.bloqueio_atraso < 7 %} vermelho_medio{% endif %} {% if sem_documentos %} vermelho_medio{% endif %} td_objetivos tabela{{peso.objetivo.id}} objetivo{{peso.objetivo.id}}B objetivo{{peso.objetivo.id}}BX" ><label for="objetivo{{peso.objetivo.id}}B">{% lng r.B.pt r.B.en %}</label></td>
                   <td class="{% if atrasado and peso.bloqueio_atraso < 9 %} vermelho_medio{% endif %} {% if sem_documentos %} vermelho_medio{% endif %} td_objetivos tabela{{peso.objetivo.id}} objetivo{{peso.objetivo.id}}A objetivo{{peso.objetivo.id}}AX" ><label for="objetivo{{peso.objetivo.id}}A">{% lng r.A.pt r.A.en %}</label></td>
                 {% endif %}
@@ -112,7 +112,7 @@
         <table style="width:100%;">
           <tr style="width:100%;">
             <td class="nav-side-wrapper th_na tabela{{peso.objetivo.id}} objetivo{{peso.objetivo.id}}NA" 
-              colspan="{% if banca.composicao.exame.sigla != "P" %}6{% else %}5{% endif %}">
+              colspan="{% if banca.sigla != "P" %}6{% else %}5{% endif %}">
                 <label style="margin-left: 8px;" for="objetivo{{peso.objetivo.id}}NA">
                   <input style="padding-bottom:2px;" type="radio" class="tabela{{peso.objetivo.id}} objetivo{{peso.objetivo.id}}NA inputNA" id="objetivo{{peso.objetivo.id}}NA" name="objetivo.{{peso.objetivo.id}}" value="{{peso.objetivo.id}}.NA" required {% if not editor %}disabled {% endif %}/> 
                   {% lng "Prefiro não avaliar este objetivo de aprendizagem" "I prefer not to evaluate this learning goal" %}
