ajustes de interface

--- a/estudantes/templates/estudantes/minhas_bancas.html
+++ b/estudantes/templates/estudantes/minhas_bancas.html
@@ -35,7 +35,7 @@
           <b>{% lng "Membros da Banca:" "Examination Board Members:" %}</b>
           {% include "membros_da_banca.html" %}
 
-          {% if user.tipo_de_usuario != 1 or banca|exibe_notas_banca %} {% comment %} Filtra certas avaliações para estudantes não verem {% endcomment %}
+          {% if banca|exibe_notas_banca or not user.eh_estud %} {% comment %} Filtra certas avaliações para estudantes não verem {% endcomment %}
             {% with avaliacao=banca.get_avaliacoes_bancas %}
               {% if avaliacao.objetivos %}
                 <hr>
