--- a/operacional/templates/operacional/operacional.html
+++ b/operacional/templates/operacional/operacional.html
@@ -46,6 +46,9 @@
 <div class="item_lista"><span class="circulo">&#9899;</span> <a href="{% url 'despesas' %}">
   {% lng "Despesas" "Expenses" %}
 </a></div>
+<div class="item_lista"><span class="circulo">&#9899;</span> <a href="{% url 'gerir_pedidos' %}">
+  {% lng "Gerir Pedidos" "Manage Requests" %}
+</a></div>
 
 <br>
 
